--- a/refrences.bib
+++ b/refrences.bib
@@ -80,16 +80,22 @@ on root volumes, especially during early boot. In this paper we describe an appr
 	file = {Full Text PDF:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/G8GBG7UC/Seltzer et al. - 2011 - Collecting Provenance via the Xen Hypervisor.pdf:application/pdf;Snapshot:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/RRHHDJVR/5168855.html:text/html}
 }
 
+
 @inproceedings{bates_trustworthy_2015,
-	title = {Trustworthy {Whole}-{System} {Provenance} for the {Linux} {Kernel}},
-	isbn = {978-1-931971-23-2},
-	url = {https://www.usenix.org/node/190901},
-	urldate = {2016-09-15},
-	author = {Bates, Adam and Tian, Dave (Jing) and Butler, Kevin R. B. and Moyer, Thomas},
-	year = {2015},
-	pages = {319--334},
-	file = {Full Text PDF:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/UDQT8XGS/Bates et al. - 2015 - Trustworthy Whole-System Provenance for the Linux .pdf:application/pdf;Snapshot:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/FJVHD8KK/190901.html:text/html}
-}
+ author = {Bates, Adam and Tian, Dave and Butler, Kevin R. B. and Moyer, Thomas},
+ title = {Trustworthy Whole-system Provenance for the Linux Kernel},
+ booktitle = {Proceedings of the 24th USENIX Conference on Security Symposium},
+ series = {SEC'15},
+ year = {2015},
+ isbn = {978-1-931971-232},
+ location = {Washington, D.C.},
+ pages = {319--334},
+ numpages = {16},
+ url = {http://dl.acm.org/citation.cfm?id=2831143.2831164},
+ acmid = {2831164},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
 
 @inproceedings{hi_fi,
 	address = {New York, NY, USA},
@@ -449,7 +455,9 @@ on root volumes, especially during early boot. In this paper we describe an appr
     title       = "The Internet of Things How the Next Evolution of the Internet Is Changing Everything",
     institution = "CISCO",
     year        = "2011",
-    month       = "apr"
+    month       = "Apr",
+    
+    note = {Accessed: 2016-10-01}
 }
 
 
